[gd_scene load_steps=3 format=3 uid="uid://undocking_scene_001"]

[ext_resource type="Script" path="res://scripts/undocking/undocking_manager.gd" id="1_undocking"]
[ext_resource type="Script" path="res://scripts/undocking/undocking_scene_controller.gd" id="2_controller"]

[node name="UndockingScene" type="Node2D"]
script = ExtResource("2_controller")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.008, 0.012, 0.025, 1)

[node name="UndockingManager" type="Node2D" parent="."]
script = ExtResource("1_undocking")

[node name="UI" type="CanvasLayer" parent="."]
layer = 10

[node name="StationLabel" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 40.0
offset_right = 250.0
offset_bottom = 70.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.6, 0.7, 0.8, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.5)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 18
text = "DEPARTING: Derelict Cargo Hub"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -120.0
offset_right = 300.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.4, 0.8, 0.4, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.6)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 16
text = ""
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -70.0
offset_right = 200.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
modulate = Color(1, 1, 1, 0.7)
value = 0.0
show_percentage = false

[node name="SkipHint" type="Label" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -40.0
offset_right = 100.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
modulate = Color(1, 1, 1, 0.5)
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "SPACE to skip"
horizontal_alignment = 1
